updated to datasource, fixed some validation issues

--- a/TechSupport2/TechSupport2.csproj
+++ b/TechSupport2/TechSupport2.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TechSupport\Validator.cs" />
     <Compile Include="TechSupport\Controller\Driver.cs" />
     <Compile Include="TechSupport\DAL\TechSupportData.cs" />
     <Compile Include="TechSupport\DAL\IncidentsDAL.cs" />
