--- a/TechSupport2/TechSupport2.csproj
+++ b/TechSupport2/TechSupport2.csproj
@@ -54,6 +54,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TechnicanData.xsd</DependentUpon>
     </Compile>
+    <Compile Include="TechSupport\Model\Technician.cs" />
     <Compile Include="TechSupport\Validator.cs" />
     <Compile Include="TechSupport\Controller\Driver.cs" />
     <Compile Include="TechSupport\DAL\TechSupportData.cs" />
