--- a/TechSupport2/TechSupport2.csproj
+++ b/TechSupport2/TechSupport2.csproj
@@ -44,15 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IncidentsData.Designer.cs">
+    <Compile Include="Technician.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>IncidentsData.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="TechnicanData.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TechnicanData.xsd</DependentUpon>
+      <DependentUpon>Technician.xsd</DependentUpon>
     </Compile>
     <Compile Include="TechSupport\Model\Technician.cs" />
     <Compile Include="TechSupport\Validator.cs" />
@@ -65,12 +60,6 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>TechSupportDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="TechSupport\View\ViewIncidentsByTech.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TechSupport\View\ViewIncidentsByTech.Designer.cs">
-      <DependentUpon>ViewIncidentsByTech.cs</DependentUpon>
     </Compile>
     <Compile Include="TechSupport\View\UpdateIncident.cs">
       <SubType>Form</SubType>
@@ -97,6 +86,12 @@
     <Compile Include="TechSupport\View\NewIncident.Designer.cs">
       <DependentUpon>NewIncident.cs</DependentUpon>
     </Compile>
+    <Compile Include="TechSupport\View\ViewIncidentsByTech.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TechSupport\View\ViewIncidentsByTech.Designer.cs">
+      <DependentUpon>ViewIncidentsByTech.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="TechSupport\View\TechSupport.resx">
       <DependentUpon>TechSupport.cs</DependentUpon>
     </EmbeddedResource>
@@ -112,17 +107,6 @@
     <EmbeddedResource Include="TechSupport\View\ViewIncidentsByTech.resx">
       <DependentUpon>ViewIncidentsByTech.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="IncidentsData.xsc">
-      <DependentUpon>IncidentsData.xsd</DependentUpon>
-    </None>
-    <None Include="IncidentsData.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>IncidentsData.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="IncidentsData.xss">
-      <DependentUpon>IncidentsData.xsd</DependentUpon>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -132,16 +116,16 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="TechnicanData.xsc">
-      <DependentUpon>TechnicanData.xsd</DependentUpon>
+    <None Include="Technician.xsc">
+      <DependentUpon>Technician.xsd</DependentUpon>
     </None>
-    <None Include="TechnicanData.xsd">
+    <None Include="Technician.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>TechnicanData.Designer.cs</LastGenOutput>
+      <LastGenOutput>Technician.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="TechnicanData.xss">
-      <DependentUpon>TechnicanData.xsd</DependentUpon>
+    <None Include="Technician.xss">
+      <DependentUpon>Technician.xsd</DependentUpon>
     </None>
     <None Include="TechSupportDataSet.xsc">
       <DependentUpon>TechSupportDataSet.xsd</DependentUpon>
