I added files to folders so they will sycn the folders. ( I hope)

--- a/WindowsFormsApplication/NorthwindApplication.csproj
+++ b/WindowsFormsApplication/NorthwindApplication.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\NorthwindController.cs" />
+    <Compile Include="DBAccess\NorthwindDBConnection.cs" />
+    <Compile Include="Model\Nurse.cs" />
     <Compile Include="View\NWGenerateReport.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,11 +179,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controller\" />
-    <Folder Include="DBAccess\" />
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
