--- a/WindowsFormsApplication/NorthwindApplication.csproj
+++ b/WindowsFormsApplication/NorthwindApplication.csproj
@@ -47,7 +47,18 @@
     <Compile Include="Controller\NorthwindController.cs" />
     <Compile Include="DBAccess\NorthwindDAL.cs" />
     <Compile Include="DBAccess\NorthwindDBConnection.cs" />
+    <Compile Include="Model\Diagnoses.cs" />
+    <Compile Include="Model\Employee.cs" />
     <Compile Include="Model\Nurse.cs" />
+    <Compile Include="Model\Patient.cs" />
+    <Compile Include="Model\PatientAllergies.cs" />
+    <Compile Include="Model\PatientTests.cs" />
+    <Compile Include="Model\PatientVisit.cs" />
+    <Compile Include="Model\PatientVisitNotes.cs" />
+    <Compile Include="Model\PatientVisitSymptoms.cs" />
+    <Compile Include="Model\PatientVisitVitals.cs" />
+    <Compile Include="Model\Position.cs" />
+    <Compile Include="Model\Test.cs" />
     <Compile Include="View\NWGenerateReport.cs">
       <SubType>Form</SubType>
     </Compile>
