--- a/WindowsFormsApplication/NorthwindApplication.csproj
+++ b/WindowsFormsApplication/NorthwindApplication.csproj
@@ -45,8 +45,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\NorthwindController.cs" />
+    <Compile Include="DBAccess\DiagnosesDAL.cs" />
+    <Compile Include="DBAccess\EmployeeDAL.cs" />
     <Compile Include="DBAccess\NorthwindDAL.cs" />
     <Compile Include="DBAccess\NorthwindDBConnection.cs" />
+    <Compile Include="DBAccess\PatientDAL.cs" />
+    <Compile Include="DBAccess\PatientAllergiesDAL.cs" />
+    <Compile Include="DBAccess\PatientTestsDAL.cs" />
+    <Compile Include="DBAccess\PatientVisitDAL.cs" />
+    <Compile Include="DBAccess\PatientVisitNotesDAL.cs" />
+    <Compile Include="DBAccess\PatientVisitSymptomsDAL.cs" />
+    <Compile Include="DBAccess\PatientVisitVitalsDAL.cs" />
+    <Compile Include="DBAccess\PositionDAL.cs" />
+    <Compile Include="DBAccess\TestDAL.cs" />
     <Compile Include="Model\Diagnoses.cs" />
     <Compile Include="Model\Employee.cs" />
     <Compile Include="Model\Nurse.cs" />
