--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="WindowsFormsApplication.Properties.Settings.CS6232_g7ConnectionString"
+            connectionString="Data Source=(local);Initial Catalog=CS6232-g7;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
