--- a/WindowsFormsApplication/NorthwindApplication.csproj
+++ b/WindowsFormsApplication/NorthwindApplication.csproj
@@ -143,6 +143,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_CS6232_g7DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>_CS6232_g7DataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="View\NWGenerateReport.resx">
       <DependentUpon>NWGenerateReport.cs</DependentUpon>
     </EmbeddedResource>
@@ -198,6 +203,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="_CS6232_g7DataSet.xsc">
+      <DependentUpon>_CS6232_g7DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="_CS6232_g7DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>_CS6232_g7DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="_CS6232_g7DataSet.xss">
+      <DependentUpon>_CS6232_g7DataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
