--- a/WindowsFormsApplication/NorthwindApplication.csproj
+++ b/WindowsFormsApplication/NorthwindApplication.csproj
@@ -69,11 +69,22 @@
     <Compile Include="Model\PatientVisitVitals.cs" />
     <Compile Include="Model\Position.cs" />
     <Compile Include="Model\Test.cs" />
+    <Compile Include="PatientsDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PatientsDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="View\NWGenerateReport.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\NWGenerateReport.Designer.cs">
       <DependentUpon>NWGenerateReport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\NWNewVisit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\NWNewVisit.Designer.cs">
+      <DependentUpon>NWNewVisit.cs</DependentUpon>
     </Compile>
     <Compile Include="View\NWSearchTest.cs">
       <SubType>Form</SubType>
@@ -129,12 +140,6 @@
     <Compile Include="View\NWPatientSearch.Designer.cs">
       <DependentUpon>NWPatientSearch.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\NWNewVisit.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\NWNewVisit.Designer.cs">
-      <DependentUpon>NWNewVisit.cs</DependentUpon>
-    </Compile>
     <Compile Include="View\NWNewPatient.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,13 +148,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="_CS6232_g7DataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>_CS6232_g7DataSet.xsd</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="View\NWGenerateReport.resx">
       <DependentUpon>NWGenerateReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\NWNewVisit.resx">
+      <DependentUpon>NWNewVisit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\NWNurseSearch.resx">
       <DependentUpon>NWNurseSearch.cs</DependentUpon>
@@ -168,9 +171,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\NWPatientSearch.resx">
       <DependentUpon>NWPatientSearch.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\NWNewVisit.resx">
-      <DependentUpon>NWNewVisit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\NWNewPatient.resx">
       <DependentUpon>NWNewPatient.cs</DependentUpon>
@@ -194,6 +194,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="PatientsDataSet.xsc">
+      <DependentUpon>PatientsDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="PatientsDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>PatientsDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="PatientsDataSet.xss">
+      <DependentUpon>PatientsDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -203,17 +214,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="_CS6232_g7DataSet.xsc">
-      <DependentUpon>_CS6232_g7DataSet.xsd</DependentUpon>
-    </None>
-    <None Include="_CS6232_g7DataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>_CS6232_g7DataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="_CS6232_g7DataSet.xss">
-      <DependentUpon>_CS6232_g7DataSet.xsd</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
