Added code for two edit buttons on visit form

--- a/Application/NorthwindApplication.csproj
+++ b/Application/NorthwindApplication.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\NorthwindController.cs" />
+    <Compile Include="Controller\Validator.cs" />
     <Compile Include="DBAccess\DiagnosesDAL.cs" />
     <Compile Include="DBAccess\EmployeeDAL.cs" />
     <Compile Include="DBAccess\NorthwindDBConnection.cs" />
