--- a/Application/NorthwindApplication.csproj
+++ b/Application/NorthwindApplication.csproj
@@ -79,6 +79,10 @@
     <Compile Include="Model\PatientVisitVitals.cs" />
     <Compile Include="Model\Position.cs" />
     <Compile Include="Model\Test.cs" />
+    <Compile Include="PatientsDataSet.cs">
+      <DependentUpon>PatientsDataSet.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="PatientsDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -158,6 +162,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\NWViewPatient.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\NWViewPatient.Designer.cs">
+      <DependentUpon>NWViewPatient.cs</DependentUpon>
+    </Compile>
     <Compile Include="_CS6232_g7DataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -209,6 +219,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\NWViewPatient.resx">
+      <DependentUpon>NWViewPatient.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="EmployeesDataSet.xsc">
       <DependentUpon>EmployeesDataSet.xsd</DependentUpon>
     </None>
