--- a/Application/NorthwindApplication.csproj
+++ b/Application/NorthwindApplication.csproj
@@ -105,6 +105,12 @@
     <Compile Include="View\NWEditPatient .Designer.cs">
       <DependentUpon>NWEditPatient .cs</DependentUpon>
     </Compile>
+    <Compile Include="View\NWNewDiag.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\NWNewDiag.Designer.cs">
+      <DependentUpon>NWNewDiag.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\NWNewVisit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -195,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\NWEditPatient .resx">
       <DependentUpon>NWEditPatient .cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\NWNewDiag.resx">
+      <DependentUpon>NWNewDiag.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\NWNewVisit.resx">
       <DependentUpon>NWNewVisit.cs</DependentUpon>
