Added encryption class and encryption on password send (and currently password checking since our passwords are not currently encrypted in the DB)

--- a/Application/NorthwindApplication.csproj
+++ b/Application/NorthwindApplication.csproj
@@ -69,6 +69,7 @@
     </Compile>
     <Compile Include="Model\Diagnoses.cs" />
     <Compile Include="Model\Employee.cs" />
+    <Compile Include="Model\Encryption.cs" />
     <Compile Include="Model\Nurse.cs" />
     <Compile Include="Model\Patient.cs" />
     <Compile Include="Model\PatientAllergies.cs" />
