--- a/Application/NorthwindApplication.csproj
+++ b/Application/NorthwindApplication.csproj
@@ -218,6 +218,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>_CS6232_g7DataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="_CS6232_g7DataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>_CS6232_g7DataSet1.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="View\NWViewEmployee.resx">
       <DependentUpon>NWViewEmployee.cs</DependentUpon>
     </EmbeddedResource>
@@ -345,6 +350,17 @@
     </None>
     <None Include="_CS6232_g7DataSet.xss">
       <DependentUpon>_CS6232_g7DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="_CS6232_g7DataSet1.xsc">
+      <DependentUpon>_CS6232_g7DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="_CS6232_g7DataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>_CS6232_g7DataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="_CS6232_g7DataSet1.xss">
+      <DependentUpon>_CS6232_g7DataSet1.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
